<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background_login_page">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/gimmyo_logo"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_marginBottom="2dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/gimmyo_logo" />

        <ImageView android:src="@drawable/gimmyo_banner"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/gimmyo_banner" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/prompt_email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"/>
        </android.support.design.widget.TextInputLayout>

        <TextView android:id="@+id/forgot_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/forgot_password"
            android:gravity="end"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button1"
            android:background="@drawable/app_login_button"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView android:id="@+id/social_options"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/social_options"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom">

            <include
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                layout="@layout/social_buttons"/>

        </LinearLayout>


        <TextView android:id="@+id/signup_or_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sign_up_or_register"
            android:gravity="bottom|center_horizontal"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>
</ScrollView>